# smtp-gated

./: .gitignore  .released  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.PL  bootstrap.sh  config.h.in  configure  configure.in  smtp-gated.spec  smtp-gated.spec.in
autom4te.cache/: output.0  requests  traces.0
contrib/: Makefile.am  Makefile.in  debian.init  fixed.conf  nat-advanced.conf  nat.conf  redhat.init  smtpgw-trace.pl  upgrade.sh
debian/: README.Debian  changelog  changelog.in  control  copyright  dirs  docs  init.d  postinst  postrm  preinst  prerm  rules
doc/: Makefile.am  Makefile.in  smtp-gated.8  smtp-gated.conf.5  smtp-gated.conf.html  smtp-gated.conf.t2t  smtp-gated.conf.t2t.in  smtp-gated.html  smtp-gated.t2t  smtp-gated.t2t.in
docs/: _config.yml  index.md
lang/: Makefile  Makefile.am  Makefile.in  lang-en.h  lang-pl.h
lib/: Makefile.am  Makefile.in  mksd.default  mksd.init
public-www/: index.md
src/: Makefile.am  Makefile.in  action.c  action.h  compat.c  compat.h  conffile.c  conffile.h  confvars.c  confvars.h  daemon.c  daemon.h  dnsbl.c  dnsbl.h  dspam-test.c  dump.c  dump.h  lang.h  lang.h.in  lockfile.c  lockfile.h  lookup.c  lookup.h  md5.c  md5.h  options.h  proxy-helper.h  ratelimit.c  ratelimit.h  regex-test.c  regex.c  regex.h  scan.c  scan.h  smtp-gated.c  smtp-gated.h  spf.c  spf.h  spool.c  spool.h  (+2 more)
tests/: 000basic.t  001mem-start.t  002connection-reset.t  003ipv6.t  004proxyname.t  020bdat-clean.t  101clamd-emu.t  102spamassassin-emu.t  103libdspam.t  104spf.t  105regex.t  106dnsbl.t  107ratelimit.t  108earlytalker.t  109spool-contents.t  501script.t  502script-virus-env.t  503script-spam-env.t  511locking-virus.t  512locking-spam.t  513locking-spf.t  514locking-regex.t  521locking-max_per_ident.t  530locking-expire.t  531locking-secondcheck.t  601timeout-smtp.t  602timeout-direct.t  603timeout-takeover.t  611max_connections.t  612max_per_host.t  613scan_max_size.t  614size-limit.t  701rset.t  702auth.t  703auth_skip.t  711verb-filter.t  712extensions-filter.t  713case-insensitive.t  714partial.t  721fixed_xclient.t  (+26 more)
